k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecg-mlops
  labels:
    app: ecg-arrhythmia
